--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,9 +2,14 @@ name: NodeJS with Webpack
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "weather-forecast" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "weather-forecast" ]
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   build:
@@ -27,7 +32,7 @@ jobs:
         npm install
         npm run build-prod
         
-    - name: Deploy ðŸš€
+    - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: prod # The folder the action should deploy.
