--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
     "istanbul-lib-report": "^3.0.1",
     "istanbul-lib-source-maps": "^4.0.1",
     "istanbul-reports": "^3.1.6",
-    "jest": "^29.6.1",
     "jest-changed-files": "^29.5.0",
     "jest-circus": "^29.6.1",
     "jest-cli": "^29.6.1",
@@ -242,6 +241,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
+    "@types/jest": "^29.5.4",
     "at-rule-packer": "^0.4.1",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
@@ -252,6 +252,7 @@
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
     "image-minimizer-webpack-plugin": "^3.8.3",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.29",
@@ -273,7 +274,7 @@
     "build-dev": "webpack",
     "start-dev": "webpack serve",
     "start": "webpack serve --mode development -c webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
