--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "anymatch": "^3.1.3",
     "argparse": "^1.0.10",
     "asynckit": "^0.4.0",
-    "babel-jest": "^29.6.1",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-jest-hoist": "^29.5.0",
     "babel-preset-current-node-syntax": "^1.0.1",
@@ -113,8 +112,6 @@
     "jest-diff": "^29.6.1",
     "jest-docblock": "^29.4.3",
     "jest-each": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.2",
-    "jest-environment-node": "^29.6.1",
     "jest-get-type": "^29.4.3",
     "jest-haste-map": "^29.6.1",
     "jest-leak-detector": "^29.6.1",
@@ -134,7 +131,6 @@
     "jest-worker": "^29.6.1",
     "js-tokens": "^4.0.0",
     "js-yaml": "^3.14.1",
-    "jsdom": "^20.0.3",
     "jsesc": "^2.5.2",
     "json-parse-even-better-errors": "^2.3.1",
     "json5": "^2.2.3",
@@ -239,11 +235,12 @@
     "yocto-queue": "^0.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.15",
+    "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
     "@types/jest": "^29.5.4",
     "at-rule-packer": "^0.4.1",
     "autoprefixer": "^10.4.15",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
@@ -253,6 +250,9 @@
     "http-server": "^14.1.1",
     "image-minimizer-webpack-plugin": "^3.8.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.29",
@@ -261,6 +261,7 @@
     "prettier": "^3.0.3",
     "sharp": "^0.32.5",
     "style-loader": "^3.3.3",
+    "text-encoding": "^0.7.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
