--- a/package.json
+++ b/package.json
@@ -254,6 +254,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
