--- a/package.json
+++ b/package.json
@@ -237,6 +237,8 @@
   "devDependencies": {
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.1.3",
     "@types/jest": "^29.5.4",
     "at-rule-packer": "^0.4.1",
     "autoprefixer": "^10.4.15",
@@ -247,15 +249,25 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
+    "eslint": "^8.49.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-css": "^0.8.1",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.4.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
+    "husky": "^8.0.3",
     "image-minimizer-webpack-plugin": "^3.8.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jsdom": "^22.1.0",
+    "lint-staged": "^14.0.1",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.29",
@@ -278,9 +290,16 @@
     "build-dev": "webpack --watch",
     "start-dev": "webpack serve",
     "start": "webpack serve --mode development -c webpack.config.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "prettier --check . && eslint .",
+    "lint:fix": "prettier --write . && eslint . --fix",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "lint-staged": {
+    "*.js": "eslint --fix",
+    "*.{js,css,md}": "prettier --write"
+  }
 }
