--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -1,6 +1,10 @@
 name: PR Sanity Check
 
-on: pull_request
+on:
+  push:
+    branches: ["weather-forecast"]
+  pull_request:
+    branches: ["weather-forecast"]
 
 jobs:
   lint:
